--- a/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_determinants_2x2_3x3_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_determinants_2x2_3x3_en.ipynb
@@ -2,7 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "HJPNapDVb7VI"
+      },
       "source": [
         "# Determinants of 2x2 and 3x3 matrices\n",
         "\n",
@@ -40,7 +42,7 @@
         "The determinant of a 3x3 matrix can be calculated using Sarrus' rule or Laplace expansion. Here, we will use Sarrus' rule:\n",
         "\n",
         "$$\n",
-        "\\text{det}(B) = a_{11} \\cdot a_{22} \\cdot a_{33} + a_{12} \\cdot a_{23} \\cdot a_{31} + a_{13} \\cdot a_{21} \\cdot a_{32} \n",
+        "\\text{det}(B) = a_{11} \\cdot a_{22} \\cdot a_{33} + a_{12} \\cdot a_{23} \\cdot a_{31} + a_{13} \\cdot a_{21} \\cdot a_{32}\n",
         "- a_{13} \\cdot a_{22} \\cdot a_{31} - a_{12} \\cdot a_{21} \\cdot a_{33} - a_{11} \\cdot a_{23} \\cdot a_{32}\n",
         "$$\n",
         "\n",
@@ -55,23 +57,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
+      "execution_count": 2,
+      "metadata": {
+        "id": "-bQ3Kxq4b7VK",
+        "outputId": "1a3df7e4-6ee4-4b9a-eb14-ba9480466350",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
-            "text/latex": [
-              "$\\displaystyle \\left[\\begin{matrix}2 & 3\\\\1 & 4\\end{matrix}\\right]$"
-            ],
             "text/plain": [
               "Matrix([\n",
               "[2, 3],\n",
               "[1, 4]])"
-            ]
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 3\\\\1 & 4\\end{matrix}\\right]$"
           },
-          "execution_count": 1,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 2
         }
       ],
       "source": [
@@ -84,11 +91,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "notebookRunGroups": {
           "groupValue": "2"
-        }
+        },
+        "id": "rN290AC1b7VL",
+        "outputId": "1f67edf7-7b21-4e56-8a0b-9e0b01d4f050"
       },
       "outputs": [
         {
@@ -110,23 +119,28 @@
     {
       "cell_type": "code",
       "execution_count": 3,
-      "metadata": {},
+      "metadata": {
+        "id": "vQw_DZnOb7VM",
+        "outputId": "3f5e3056-2678-4c05-8b94-1e225f3b9bcd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
-            "text/latex": [
-              "$\\displaystyle \\left[\\begin{matrix}2 & 3 & 1\\\\1 & 4 & 5\\\\3 & 2 & 1\\end{matrix}\\right]$"
-            ],
             "text/plain": [
               "Matrix([\n",
               "[2, 3, 1],\n",
               "[1, 4, 5],\n",
               "[3, 2, 1]])"
-            ]
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 3 & 1\\\\1 & 4 & 5\\\\3 & 2 & 1\\end{matrix}\\right]$"
           },
-          "execution_count": 3,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 3
         }
       ],
       "source": [
@@ -138,17 +152,23 @@
     {
       "cell_type": "code",
       "execution_count": 4,
-      "metadata": {},
+      "metadata": {
+        "id": "laRFDJrYb7VM",
+        "outputId": "98f991f9-f207-4493-b94f-d11a34596b5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
-          "execution_count": 4,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 4
         }
       ],
       "source": [
@@ -158,7 +178,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "IivrKVOPb7VM"
+      },
       "source": [
         "---\n",
         "\n",
@@ -189,7 +211,7 @@
         "$$\n",
         "\n",
         "2. 3x3 Matrices:\n",
-        " \n",
+        "\n",
         "\n",
         "$$\n",
         "\\mathbf{D} =\n",
@@ -214,6 +236,351 @@
         "\\end{pmatrix}\n",
         "$$"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A=sp.Matrix([[2,3],[1,4]])\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "pSYw70KMRHx4",
+        "outputId": "5a387a19-05e9-4c8c-cb6c-b33c3376d7ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[2, 3],\n",
+              "[1, 4]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 3\\\\1 & 4\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(2*4-3*1)== A.det()"
+      ],
+      "metadata": {
+        "id": "FoPvl3WfRd4d",
+        "outputId": "dfe36409-27d6-42dd-c2ea-ec1518835b9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "B=sp.Matrix([[5,6],[7,8]])\n",
+        "B"
+      ],
+      "metadata": {
+        "id": "faaKniMXRzZM",
+        "outputId": "bec2f690-8d25-42f6-8bf8-731b6871d5f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[5, 6],\n",
+              "[7, 8]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}5 & 6\\\\7 & 8\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(5*8-6*7)==B.det()"
+      ],
+      "metadata": {
+        "id": "Wdl8wFjaR7SW",
+        "outputId": "e7559544-25db-4eb7-8574-89babc051292",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "C=sp.Matrix([[-1,2],[3,0]])\n",
+        "C"
+      ],
+      "metadata": {
+        "id": "lQeLyMDTSFAf",
+        "outputId": "c05b13dd-5ca0-4027-be16-23090f83e593",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[-1, 2],\n",
+              "[ 3, 0]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}-1 & 2\\\\3 & 0\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(-1*0-2*3)==C.det()"
+      ],
+      "metadata": {
+        "id": "YnJgzZcGST1m",
+        "outputId": "199bfb87-f5e8-496d-f25c-849a994e484e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "D=sp.Matrix([[1,0,2],[-1,3,1],[2,4,-2]])\n",
+        "D"
+      ],
+      "metadata": {
+        "id": "_djZAf0vSjNJ",
+        "outputId": "7e866898-87f6-4f94-ba0d-18ff2f4fbda4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[ 1, 0,  2],\n",
+              "[-1, 3,  1],\n",
+              "[ 2, 4, -2]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 2\\\\-1 & 3 & 1\\\\2 & 4 & -2\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(1*3*-2 + 0*1*2 + 2*-1*4 - 2*3*2 - 0*-1*-2 - 1*1*4)==D.det()"
+      ],
+      "metadata": {
+        "id": "MH6iB1LKSzz5",
+        "outputId": "b2752727-9850-4d70-e88e-3c8748cb6185",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "E=sp.Matrix([[3,1,-1],[0,2,4],[5,3,2]])\n",
+        "E"
+      ],
+      "metadata": {
+        "id": "eAsFIvvbV_iK",
+        "outputId": "eb441989-7013-4273-8041-0870c43163a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[3, 1, -1],\n",
+              "[0, 2,  4],\n",
+              "[5, 3,  2]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}3 & 1 & -1\\\\0 & 2 & 4\\\\5 & 3 & 2\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(3*2*2 + 1*4*5 + -1*0*3 - -1*2*5 - 1*0*2 - 3*4*3)==E.det()"
+      ],
+      "metadata": {
+        "id": "-PMhG8_sWNnd",
+        "outputId": "a95bf164-16c2-4f0a-9970-442d88b7fb64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "F=sp.Matrix([[2,-3,1],[1,4,-2],[1,5,3]])\n",
+        "F"
+      ],
+      "metadata": {
+        "id": "mNPX1v7sW7RK",
+        "outputId": "5a5d9f8b-1cf4-4852-e840-b63789c077f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[2, -3,  1],\n",
+              "[1,  4, -2],\n",
+              "[1,  5,  3]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & -3 & 1\\\\1 & 4 & -2\\\\1 & 5 & 3\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(2*4*3 + -3*-2*1 + 1*1*5 - 1*4*1 - -3*1*3 - 2*-2*5)==F.det()"
+      ],
+      "metadata": {
+        "id": "gciZq_sGXRfe",
+        "outputId": "c44ecf60-cfd9-4285-a304-509b48dd03a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     }
   ],
   "metadata": {
@@ -233,8 +600,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
+    },
+    "colab": {
+      "provenance": []
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 4
+  "nbformat_minor": 0
 }
