--- a/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_triangular_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_triangular_en.ipynb
@@ -2,42 +2,47 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "DEFT2IV0OliK"
+      },
       "source": [
         "# Triangular Matrices and determinant calculation"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
+      "execution_count": 2,
+      "metadata": {
+        "id": "QrBKU42OOliM",
+        "outputId": "65ac3170-1b19-4927-abe8-eb9fcc2402cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        }
+      },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
-            "text/markdown": [
-              "**Initial Matrix:**"
-            ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
-            ]
+            ],
+            "text/markdown": "**Initial Matrix:**"
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
+          "output_type": "display_data",
           "data": {
-            "text/latex": [
-              "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 3\\\\2 & 5 & 3\\\\3 & 2 & 1\\end{matrix}\\right]$"
-            ],
             "text/plain": [
               "Matrix([\n",
               "[1, 2, 3],\n",
               "[2, 5, 3],\n",
               "[3, 2, 1]])"
-            ]
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 3\\\\2 & 5 & 3\\\\3 & 2 & 1\\end{matrix}\\right]$"
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
       ],
       "source": [
@@ -149,8 +154,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "fLFEPgV0OliQ",
+        "outputId": "7eed1991-2cbe-4102-f6fe-4509d5010340"
+      },
       "outputs": [
         {
           "data": {
@@ -186,8 +194,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "oYLESHc7OliQ",
+        "outputId": "b1870d59-46c1-4856-9e5c-aeca21b4b283"
+      },
       "outputs": [
         {
           "data": {
@@ -223,8 +234,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "cfQXNOOGOliR",
+        "outputId": "5448d42f-90ad-471a-8fbc-f25ce304a313"
+      },
       "outputs": [
         {
           "data": {
@@ -260,7 +274,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Uv6gNbFSOliR"
+      },
       "source": [
         "The resulting matrix is an upper triangular matrix.\n",
         "\n",
@@ -271,8 +287,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "NpPt4G1AOliS",
+        "outputId": "4b116c31-2626-4bd7-a75c-399dbaccaa5d"
+      },
       "outputs": [
         {
           "data": {
@@ -292,7 +311,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "rhoW68weOliS"
+      },
       "source": [
         "---\n",
         "\n",
@@ -300,7 +321,7 @@
         "\n",
         "Perform row and column operations to reduce the following matrices to an upper triangular form and calculate their determinants by taking the product of the diagonal elements.\n",
         "\n",
-        "1. \n",
+        "1.\n",
         "$$\n",
         "A = \\begin{bmatrix}\n",
         "12 & 3 \\\\\n",
@@ -311,18 +332,355 @@
         "2.\n",
         "\n",
         "$$\n",
-        "B = \\begin{bmatrix} \n",
+        "B = \\begin{bmatrix}\n",
         "1 & 2 & 3 \\\\\n",
         "4 & 5 & 6 \\\\\n",
-        "7 & 8 & 9 \n",
+        "7 & 8 & 9\n",
         "\\end{bmatrix}\n",
         "$$"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "5D-n-FnlOliS"
+      },
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "startm=[[12,3],[-18,-4]]\n",
+        "\n",
+        "f=SymbolicMatrix(startm)\n",
+        "\n",
+        "comp_matrix=sp.Matrix(startm)"
+      ],
+      "metadata": {
+        "id": "fKgoVC6tOnc6",
+        "outputId": "777c1d0c-071f-41a4-9bd6-f7ac96c15f2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Initial Matrix:**"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[ 12,  3],\n",
+              "[-18, -4]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}12 & 3\\\\-18 & -4\\end{matrix}\\right]$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f.add_row(2,1,1)"
+      ],
+      "metadata": {
+        "id": "FMkJq1z-PQzv",
+        "outputId": "e1be8ce3-804f-45b5-a4aa-fc5027334968",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r2 = r2 + 1*r1"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[12,  3],\n",
+              "[-6, -1]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}12 & 3\\\\-6 & -1\\end{matrix}\\right]$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f.add_row(2,1,1/2)"
+      ],
+      "metadata": {
+        "id": "dBu2nNXhPvjN",
+        "outputId": "a6a56d2c-e9f0-441f-dc18-ed23365d7ab9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r2 = r2 + 1/2*r1"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[12,   3],\n",
+              "[ 0, 1/2]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}12 & 3\\\\0 & \\frac{1}{2}\\end{matrix}\\right]$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "comp_matrix.det()==12*sp.Rational(1,2)"
+      ],
+      "metadata": {
+        "id": "Olr9UTKrP25O",
+        "outputId": "8949ad6a-1646-4ed8-f1c3-e1354c0ed437",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "start=[[1,2,3],[4,5,6],[7,8,9]]\n",
+        "h=SymbolicMatrix(start)\n",
+        "compu_matrix=sp.Matrix(start)"
+      ],
+      "metadata": {
+        "id": "qcj-G63-QKx-",
+        "outputId": "d658d4a2-3f3b-468c-c767-e739d6e98551",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Initial Matrix:**"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[1, 2, 3],\n",
+              "[4, 5, 6],\n",
+              "[7, 8, 9]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 3\\\\4 & 5 & 6\\\\7 & 8 & 9\\end{matrix}\\right]$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h.add_row(2,1,-4)"
+      ],
+      "metadata": {
+        "id": "dlfiVqFTRg0R",
+        "outputId": "4631f8a7-53cd-4507-f4b4-3d2ab4d4c23f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r2 = r2 + -4*r1"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[1,  2,  3],\n",
+              "[0, -3, -6],\n",
+              "[7,  8,  9]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 3\\\\0 & -3 & -6\\\\7 & 8 & 9\\end{matrix}\\right]$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h.add_row(3,1,-7)"
+      ],
+      "metadata": {
+        "id": "fDrWONIhRqUV",
+        "outputId": "a9b2a669-01c4-4c00-af0e-c5db0747cf5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r3 = r3 + -7*r1"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[1,  2,   3],\n",
+              "[0, -3,  -6],\n",
+              "[0, -6, -12]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 3\\\\0 & -3 & -6\\\\0 & -6 & -12\\end{matrix}\\right]$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h.add_row(3,2,-2)"
+      ],
+      "metadata": {
+        "id": "VDilVJ2mRy8x",
+        "outputId": "1dd73b12-4e03-4052-8dd9-9645376fae99",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r3 = r3 + -2*r2"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[1,  2,  3],\n",
+              "[0, -3, -6],\n",
+              "[0,  0,  0]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 3\\\\0 & -3 & -6\\\\0 & 0 & 0\\end{matrix}\\right]$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "compu_matrix.det()==1*(-3)*0"
+      ],
+      "metadata": {
+        "id": "g1Oc6voKSBaF",
+        "outputId": "9c492182-2eb4-43ec-ad4d-6e8027450517",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     }
   ],
   "metadata": {
@@ -342,8 +700,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
+    },
+    "colab": {
+      "provenance": []
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 4
+  "nbformat_minor": 0
 }
